--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="rtl">
 <head>
   <meta charset="utf-8">
-<!-- <title>Courses | Education</title> -->
+<title>Courses | Education</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="assets/img/favicon.ico">
